@@ -25,7 +25,7 @@ int MultiCastReceive(int sock, char *message, int maxlen, char *from);
 /* Note! Keep this in sync with Mk5StateStrings[][24] in difxmessage.c */
 enum Mk5State
 {
-	MARK5_STATE_OPENING,
+	MARK5_STATE_OPENING = 0,
 	MARK5_STATE_OPEN, 
 	MARK5_STATE_CLOSE, 
 	MARK5_STATE_GETDIR, 
@@ -37,7 +37,8 @@ enum Mk5State
 	MARK5_STATE_INITIALIZING,
 	MARK5_STATE_RESETTING,
 	MARK5_STATE_REBOOTING,
-	MARK5_STATE_POWEROFF
+	MARK5_STATE_POWEROFF,
+	NUM_MARK5_STATES	/* this needs to be the last line of enum */
 };
 
 extern const char Mk5StateStrings[][24];
@@ -45,7 +46,7 @@ extern const char Mk5StateStrings[][24];
 /* Note! Keep this in sync with DifxStateStrings[][24] in difxmessage.c */
 enum DifxState
 {
-	DIFX_STATE_SPAWNING,	/* Issued by mpirun wrapper */
+	DIFX_STATE_SPAWNING = 0,/* Issued by mpirun wrapper */
 	DIFX_STATE_STARTING,	/* fxmanager just started */
 	DIFX_STATE_RUNNING,	/* Accompanied by visibility info */
 	DIFX_STATE_ENDING,	/* Normal end of job */
@@ -53,7 +54,8 @@ enum DifxState
 	DIFX_STATE_ABORTING,	/* Unplanned early end due to runtime error */
 	DIFX_STATE_TERMINATING,	/* Caught SIGINT, closing down */
 	DIFX_STATE_TERMINATED,	/* Finished cleaning up adter SIGINT */
-	DIFX_STATE_MPIDONE	/* mpi process has finished */
+	DIFX_STATE_MPIDONE,	/* mpi process has finished */
+	NUM_DIFX_STATES		/* this needs to be the last line of enum */
 };
 
 extern const char DifxStateStrings[][24];
@@ -61,12 +63,13 @@ extern const char DifxStateStrings[][24];
 /* Note! Keep this in sync with DifxMessageTypeStrings[][24] in difxmessage.c */
 enum DifxMessageType
 {
-	DIFX_MESSAGE_UNKNOWN,
+	DIFX_MESSAGE_UNKNOWN = 0,
 	DIFX_MESSAGE_LOAD,
 	DIFX_MESSAGE_ERROR,
 	DIFX_MESSAGE_MARK5STATUS,
 	DIFX_MESSAGE_STATUS,
 	DIFX_MESSAGE_INFO,
+	DIFX_MESSAGE_COMMAND,
 	NUM_DIFX_MESSAGE_TYPES	/* this needs to be the last line of enum */
 };
 
@@ -91,6 +94,8 @@ typedef struct
 	float cpuLoad;
 	int totalMemory;
 	int usedMemory;
+	unsigned int netRXRate;		/* Bytes per second */
+	unsigned int netTXRate;		/* Bytes per second */
 } DifxMessageLoad;
 
 typedef struct
@@ -113,12 +118,19 @@ typedef struct
 
 typedef struct
 {
+	char command[1000];
+} DifxMessageCommand;
+
+typedef struct
+{
 	enum DifxMessageType type;
 	char from[32];
 	char to[32][32];
 	int nTo;
 	char identifier[32];
 	int mpiId;
+	int seqNumber;
+	/* FIXME -- add time of receipt */
 	union
 	{
 		DifxMessageMk5Status	mk5status;
@@ -126,6 +138,7 @@ typedef struct
 		DifxMessageError	error;
 		DifxMessageStatus	status;
 		DifxMessageInfo		info;
+		DifxMessageCommand	command;
 	} body;
 	int _xml_level;			/* internal use only */
 	char _xml_element[5][32];	/* internal use only */
@@ -149,6 +162,7 @@ int difxMessageReceiveClose(int sock);
 int difxMessageReceive(int sock, char *message, int maxlen, char *from);
 
 int difxMessageParse(DifxMessageGeneric *G, const char *message);
+void difxMessageGenericPrint(const DifxMessageGeneric *G);
 
 #ifdef __cplusplus
 }
