@@ -6,3 +6,4 @@ Version 0.2  20080518
 ~~~~~~~~~~~
 Add XML parsing routines
 More structured document types
+Add generic document union and associated processing
